--- a/assets/style/arkle.css
+++ b/assets/style/arkle.css
@@ -90,6 +90,7 @@
         margin: 30px 0px;
         font-size: 16px;
         line-height: 24px;
+        width: 100%;
     }
 
     .soon {
@@ -98,11 +99,5 @@
 
     .more {
         display: none;
-    }
-}
-
-@media(max-width: 500px) {
-    .description {
-        width: 300px;
     }
 }
