--- a/assets/style/group.css
+++ b/assets/style/group.css
@@ -1,9 +1,9 @@
 #group {
+    width: 100vw;
     height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow: hidden;
 }
 
 .title {
@@ -14,17 +14,17 @@
 }
 
 .cards {
-    max-width: 1280px;
-    height: 870px;
-    overflow: hidden;
+    max-width: 1200px;
     display: flex;
     justify-content: center;
+    overflow: hidden;
     margin-bottom: 60px;
     gap: 24px;
 }
 
 .card {
     width: 384px;
+    height: auto;
     background-color: #DBC9B7;
     display: flex;
     flex-direction: column;
@@ -66,7 +66,12 @@
     text-align: justify;
 }
 
-.card button {
+.card a {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    color: #270D06;
     width: 100%;
     height: 52px;
     border-radius: 12px;
@@ -82,12 +87,11 @@
     margin-bottom: 160px;
 }
 
-.see span {
+.see a {
     width: 300px;
     font-family: 'CarterOne';
     font-size: 32px;
-    margin-right: 10px;
-    padding: 8px;
+    margin-right: 20px;
     width: 100%;
     color: var(--bg-color);
     background: #270D06A6;
@@ -102,7 +106,6 @@
 
 @media(max-width: 768px) {
     .title {
-        margin-top: 60px;
         font-size: 56px;
         line-height: 56px;
         margin-bottom: 48px;
@@ -112,8 +115,9 @@
         margin-bottom: 120px;
     }
 
-    .see span {
+    .see a {
         font-size: 24px;
+        padding: 0px 10px;
     }
 
     .swiper-slide {
@@ -122,14 +126,22 @@
 
     .cards {
         width: 384px;
+        overflow-x: scroll;
+        -ms-overflow-style: none;
+        overflow: -moz-scrollbars-none;
+        height: 600px;
+    }
+
+    .group_card-description > div > p:not(:first-of-type) {
+        display: none;
+    }
+
+    .card:nth-child(1) {
+        margin-left: 830px;
     }
 }
 
 @media(max-width: 700px) {
-    .card {
-        width: 320px;
-    }
-
     .title {
         font-size: 40px;
         line-height: 40px;
@@ -140,11 +152,19 @@
         margin-bottom: 80px;
     }
 
-    .see span {
+    .see a {
         font-size: 20px;
+        padding: 0px 10px;
     }
 
     .cards {
         width: 384px;
+        overflow-x: scroll;
+        -ms-overflow-style: none;
+        overflow: -moz-scrollbars-none;
+    }
+
+    .card:nth-child(1) {
+        margin-left: 830px;
     }
 }
