--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -41,25 +41,27 @@ a {
 }
 
 #header {
-    width: 100vw;
+    width: 100%;
+    height: 100vh;
 }
 
 header {
-    width: 100vw;
+    width: 100%;
     height: auto;
 }
 
 nav {
     max-width: var(--w-width);
     height: 100px;
-    margin: 0 30px 0 5vw;
+    margin: 0 auto;
+    padding: 0px 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     overflow: hidden;
 }
 
-.nav-logo>img {
+.nav-logo > img {
     height: 80px;
 }
 
@@ -67,9 +69,8 @@ nav {
     height: 37px;
 }
 
-
-.nav-links>a:nth-child(1) {
-    padding-right: 20px;
+.nav-links > img:nth-child(1) {
+    margin-right: 30px;
 }
 
 .nav-menu {
@@ -78,11 +79,11 @@ nav {
     justify-content: space-between;
     align-items: center;
 }
-
+  
 .nav-menu li {
     margin-right: 48px;
 }
-
+  
 .nav-menu li:last-child {
     margin-right: 0;
 }
@@ -94,13 +95,9 @@ nav {
     line-height: 20px;
 }
 
-.main-nav {
-    margin-right: -8vw;
-}
-
 
 @media(max-width: 768px) {
-    .nav-logo>img {
+    .nav-logo > img {
         height: 60px;
     }
 
@@ -108,7 +105,7 @@ nav {
         height: 30px;
     }
 
-    .nav-links>img:nth-child(1) {
+    .nav-links > img:nth-child(1) {
         margin-right: 25px;
     }
 }
@@ -141,7 +138,7 @@ nav {
         order: 2;
     }
 
-    .nav-logo>img {
+    .nav-logo > img {
         height: 60px;
     }
 
@@ -149,7 +146,11 @@ nav {
         height: 30px;
     }
 
-    .nav-links>img:nth-child(1) {
+    .nav-links > img:nth-child(1) {
         margin-right: 20px;
     }
+}
+
+@media(max-width: 700px) {
+
 }
