--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -105,7 +105,7 @@ nav {
         height: 30px;
     }
 
-    .nav-links > img:nth-child(1) {
+    .nav-links > a > img:nth-child(1) {
         margin-right: 25px;
     }
 }
@@ -146,7 +146,7 @@ nav {
         height: 30px;
     }
 
-    .nav-links > img:nth-child(1) {
+    .nav-links > a > img:nth-child(1) {
         margin-right: 20px;
     }
 }
