--- a/assets/style/roadmap.css
+++ b/assets/style/roadmap.css
@@ -5,6 +5,7 @@
     align-items: center;
     margin: 0 auto;
     overflow: hidden;
+    margin-bottom: 100px;
 }
 
 .roadmap-horse {
@@ -13,7 +14,7 @@
     margin-left: 35%;
 }
 
-.roadmap-horse img  {
+.roadmap-horse img {
     height: 118px;
 }
 
@@ -25,7 +26,7 @@
 }
 
 .roadmap-active {
-    border-color:#FB7F02;
+    border-color: #FB7F02;
 }
 
 .roadmap-step {
@@ -70,9 +71,9 @@
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(2, 1fr);
     }
-    
 
-    .roadmap-step:nth-child(3), 
+
+    .roadmap-step:nth-child(3),
     .roadmap-step:nth-child(4) {
         margin-top: 24px;
     }
@@ -86,9 +87,9 @@
         grid-template-rows: repeat(4, 1fr);
         gap: 0;
     }
-    
 
-    .roadmap-step:nth-child(3), 
+
+    .roadmap-step:nth-child(3),
     .roadmap-step:nth-child(4) {
         margin-top: 24px;
     }
@@ -100,7 +101,7 @@
         margin: 0;
     }
 
-    .roadmap-step:nth-child(3), 
+    .roadmap-step:nth-child(3),
     .roadmap-step:nth-child(4) {
         margin-top: 0px;
     }
@@ -128,5 +129,5 @@
 }
 
 .roadmap-active {
-    border-color:#FB7F02;
+    border-color: #FB7F02;
 }
