--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -61,7 +61,7 @@ nav {
     overflow: hidden;
 }
 
-.nav-logo > img {
+.nav-logo>img {
     height: 80px;
 }
 
@@ -69,8 +69,8 @@ nav {
     height: 37px;
 }
 
-.nav-links > img:nth-child(1) {
-    margin-right: 30px;
+.nav-links>a:nth-child(1) {
+    margin-right: 20px;
 }
 
 .nav-menu {
@@ -79,11 +79,11 @@ nav {
     justify-content: space-between;
     align-items: center;
 }
-  
+
 .nav-menu li {
     margin-right: 48px;
 }
-  
+
 .nav-menu li:last-child {
     margin-right: 0;
 }
@@ -97,7 +97,7 @@ nav {
 
 
 @media(max-width: 768px) {
-    .nav-logo > img {
+    .nav-logo>img {
         height: 60px;
     }
 
@@ -105,7 +105,7 @@ nav {
         height: 30px;
     }
 
-    .nav-links > a > img:nth-child(1) {
+    .nav-links>a>img:nth-child(1) {
         margin-right: 25px;
     }
 }
@@ -138,7 +138,7 @@ nav {
         order: 2;
     }
 
-    .nav-logo > img {
+    .nav-logo>img {
         height: 60px;
     }
 
@@ -146,11 +146,9 @@ nav {
         height: 30px;
     }
 
-    .nav-links > a > img:nth-child(1) {
+    .nav-links>a>img:nth-child(1) {
         margin-right: 20px;
     }
 }
 
-@media(max-width: 700px) {
-
-}
+@media(max-width: 700px) {}
