--- a/assets/style/arkle.css
+++ b/assets/style/arkle.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 130px;
+    padding-top: 80px;
 }
 
 .gradient {
@@ -43,6 +43,43 @@
     -webkit-text-stroke: 6px transparent;
 }
 
+.buy-link {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    width: 120px;
+    height: 52px;
+    border-radius: 12px;
+    /* background: linear-gradient(to bottom, #F85400 0%, #FC9104 100%); */
+    background-color: #81685b;
+    font-size: 18px;
+    font-weight: 800;
+    transition: 0.5s;
+
+
+}
+
+.buy-link:hover {
+    background: linear-gradient(to bottom, #F85400 0%, #FC9104 100%);
+}
+
+.buy-link a {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    height: 100%;
+    color: white;
+
+}
+
+.buy-link a:hover {
+    color: black;
+
+}
+
 .more {
     margin-top: 40px;
     display: flex;
@@ -64,7 +101,7 @@
         font-size: 180px;
         line-height: 180px;
     }
-    
+
     .description {
         margin: 32px 0px;
         font-size: 20px;
@@ -85,7 +122,7 @@
         font-size: 100px;
         line-height: 100px;
     }
-    
+
     .description {
         margin: 30px 0px;
         font-size: 16px;
